implement user avatar functionality with dynamic URL generation and update user service methods